--- a/.github/workflows/dagster-plus-deploy.yml
+++ b/.github/workflows/dagster-plus-deploy.yml
@@ -18,7 +18,7 @@ env:
   DAGSTER_CLOUD_YAML_PATH: '.'
   DAGSTER_CLOUD_FILE: 'dagster_cloud.yaml'
   DAGSTER_CLOUD_ORGANIZATION: 'personal-by-justin'
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
 
 jobs:
   dagster_cloud_default_deploy:
