--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9,<3.13"
 dependencies = [
     "dagster",
+    "dagster-cloud",
     "google-generativeai",
     "requests",
     "b2sdk",
